--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,9 +5,9 @@
 
     <app-big-card
       Id="1"
-      photoCover="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/7F51FA9F6CBD9F0C9B1394B1CC0A6A842D07091318674E234CD33CBF7C28CDC3/scale?width=1200&aspectRatio=1.78&format=jpeg"
-      cardTitle="NOVO HOMEM DE FERRO EM 3D"
-      cardDescription="Marvel Anuncia novo homem de ferro"
+      photoCover="https://i0.wp.com/metagalaxia.com.br/wp-content/uploads/2023/09/Gojo-vivo.jpg?resize=1024%2C611&ssl=1"
+      cardTitle="Satoru Gojo está morto"
+      cardDescription="Ryomen Sukuna é um pilantra"
       >
     </app-big-card>
 
@@ -15,23 +15,23 @@
   <div class="articles__others">
     <app-small-card
       Id="2"
-      cardTitle="Nova Série anunciada no Disney +"
-      photoCover="https://disneyplusbrasil.com.br/wp-content/uploads/2021/07/Series-Marvel-Disney-Plus-1024x576.jpg"
+      cardTitle="Capítulo 238 de Jujutsu Kaisen confirma a morte de um personagem popular"
+      photoCover="https://criticalhits.com.br/wp-content/webp-express/webp-images/doc-root/wp-content/uploads/2023/10/Jujutsu-Kaisen_-After-Gojou-whos-696x392.jpg.webp"
     >
     </app-small-card>
 
     <app-small-card
       Id="3"
-      cardTitle="Novo filme do pantera negra lançado em breve"
-      photoCover="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/35720ACD323F927C3A83D809D0F460BD3651740DA519BCC184B6F042057EA14D/scale?width=1200&aspectRatio=1.78&format=jpeg"
+      cardTitle="Jujutsu Kaisen 0"
+      photoCover="https://cdn.ome.lt/1SDJoI-H5odCm0zL_DMO8qksfU4=/1200x630/smart/extras/conteudos/jujtusu_kaisen_0.png"
     >
     </app-small-card
     >
 
     <app-small-card
       Id="4"
-      cardTitle="Novo filme dos X-men está em pós produção, afirma diretor"
-      photoCover="https://midias.correiobraziliense.com.br/_midias/jpg/2022/07/22/675x450/1_xmen-26096415.jpeg?20220722171339?20220722171339"
+      cardTitle="Capítulo 250: Previsões"
+      photoCover="https://blogdataverna.com.br/wp-content/uploads/2023/07/kpnl802eroz51-752x440.jpg"
     >
     </app-small-card>
   </div>
